--- a/rose.html
+++ b/rose.html
@@ -20,21 +20,21 @@
 <img src="real-rose.jpg" class="roseImage">
 
 <div class="mainText">
-If I could give you every rose in the world…  
-it still wouldn’t equal what you are to me.
+Even If I Could Give You All The Roses In The World...
+I Know This Will Still Be Your Favourite Rose.
 </div>
 
 <div class="roses">
 
-<div class="rose" data-message="Loving you has been the most natural thing my heart has ever done. ❤️">
+<div class="rose" data-message="Saying Me too that day was the best decision of my life. ❤️">
 🌹
 </div>
 
-<div class="rose" data-message="Thank you for walking into my life and quietly changing everything. 🌸">
+<div class="rose" data-message="Thank you for being the light of this ray. 🌸">
 🌸
 </div>
 
-<div class="rose" data-message="With you… my heart feels at home. 🤍">
+<div class="rose" data-message="You are my Home, My Safe Place, My Comfort Zone. 🤍">
 🤍
 </div>
 
