--- a/teddy-secret.html
+++ b/teddy-secret.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Teddy Day 🧸</title>
+<title>For Me ❤️</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 
@@ -15,12 +15,12 @@
 
 <div class="glow"></div>
 
-<div class="container">
+<div class="memory">
+
+<img src="teddy-1.jpg" class="showImg">
 
 <div id="typeText"></div>
 <div class="cursor"></div>
-
-<div id="secretBtn">something you gave me… ❤️</div>
 
 </div>
 
